2009-09-13  Christopher Bratusek <zanghar@freenet.de>
	* sawfish.doap: added

2009-09-12  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/focus.jl: doc for focus-revert
	                            indention improvements
				    -- [Teika Kazura]
	
	* man/news.texi: major rewrite of 1.5.0 section [Teika Kazura]
	                 updated

	* sawfish.desktop
	* sawfish-session.desktop
	* lisp/sawfish/wm/commands/viewport-extras.jl
	* man/news.texi
	* themes/Crux/README.gl
	* themes/absolute-e/README.ja
	* themes/brushed-metal/README.ja
	* themes/brushed-metal/README.pl
	* themes/gradient/README.gl
	* themes/gradient/README.ja
	* themes/gradient/README.pl
	* themes/gtk/README.gl
	* themes/gtk/README.ja
	* themes/gtk/README.pl
	* themes/microGUI/README.gl
	* themes/microGUI/README.it
	* themes/microGUI/README.ja
	* themes/microGUI/README.pl
	* themes/mono/README.gl
	* themes/mono/README.ja
	* themes/mono/README.pl
	* themes/simple/README.gl
	* themes/simple/README.ja
	* themes/simple/README.pl
	* themes/smaker/README.it
	* themes/smaker/README.ja
	* themes/smaker/README.pl: change encoding to UTF8 (latin -1 + -2 previously) [Teika Kazura]

	* scripts/sawfish-client.jl: added `,quit' command (like `C-d'), unlike `C-c' this won't kill sawfish [Teika Kazura]

	* lisp/sawfish/wm/customize.jl: With new "customize-redirect" option, Sawfish-UIs output can be redirected [Teika Kazura]

	* OPTIONS
	* man/news.texi: updated

	* lisp/sawfish/wm/misc.jl: squashed the last compiler warning in rep-code [Matthew Love]

	* Makefile.in: don't remove ancient Sawmill.desktop

	* lisp/sawfish/wm/user.jl: display-message-with-timeout now must be called with a timeout
	                           header updated
				   description for view-clipboard

2009-09-11  Christopher Bratusek <zanghar@freenet.de>
	* configure.in
	* Makedefs.in
	* Makefile.in: check for installation path of sawfish-ksm.desktop via kde4-config

	* lisp/sawfish/wm/ext/fdo-menu.jl: added copyright header