@@ -648,3 +648,11 @@
 
 ;; (define-special-variable clipboard-preview-timeout 5
 ;;   "Maximum time to let `view-clipboard' stay running")
+
+;; display-workspace-name options
+
+;; (define-special-variable display-ws-name-on-switch nil
+;;   "Wether to display workspace name upon switch")
+
+;; (define-special-variable display-ws-name-timeout 3
+;;   "How long to display workspace name")
