@@ -85,6 +85,8 @@ your system, but the later doesn't
 
 @item Improve position matcher to bind a window to a position (either @code{center} @code{east} @code{north} @code{north-east} @code{north-west} @code{south} @code{south-east} @code{south-west} @code{west}) OR to a user-given position [Jeremy Hankins]
 
+@item When entering a different Workspace, it's now possible to display the name of it (like in Enlightenment) [Christopher Bratusek]
+
 @item When GNOME Integration is loaded, don't remove @code{quit} and @code{restart} entries from menu [Christopher Bratusek]
 
 @item When GNOME Integration is loaded, append @code{Logout}- and @code{Shutdown from GNOME} entries to Session sub-menu [Christopher Bratusek]
