@@ -1,6 +1,13 @@
 2009-09-13  Christopher Bratusek <zanghar@freenet.de>
 	* sawfish.doap: added
 
+	* lisp/sawfish/wm/commands/user.jl: added display-workspace-name
+	                                    clipboard-preview-clip-length is now a defcustom
+					    clipboard-preview-timeout is now a defcustom
+
+	* OPTIONS
+	* man/news.texi: updated
+
 2009-09-12  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/focus.jl: doc for focus-revert
 	                            indention improvements
